--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PROJECT REVOU</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PROJECT REVOU</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- FONTS STYLE -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- LOGO & NAVIGATION -->
+    <header class="main-header">
+      <nav>
+        <!-- LOGO -->
+        <div class="logo-icon">
+          <img src="./logo/revou.logo.png" alt="my-avatar" />
+        </div>
+        <!-- NAVIGATION BUTTON -->
+        <ul>
+          <li>
+          <a href="#">Home</a>
+          </li>
+          <li>
+          <a href="#">Our Profile</a>
+          </li>
+          <li>
+          <a href="#">Portofolio</a>
+          </li>
+          <li>
+          <a href="#">Message Us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
