PROGRESS MAIN CONTENT

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         <!-- NAVIGATION BUTTON START -->
         <ul id="menu-list" class="hidden">
           <li>
-            <a href="#">Home</a>
+            <a href="#home-page">Home</a>
           </li>
           <li>
-            <a href="#">Our Profile</a>
+            <a href="#our-profile">Our Profile</a>
           </li>
           <li>
-            <a href="#">Portofolio</a>
+            <a href="#portfolio">Portfolio</a>
           </li>
           <li>
-            <a href="#">Message Us</a>
+            <a href="#message-us">Message Us</a>
           </li>
         </ul>
         <!-- NAVIGATION BUTTON END -->
@@ -52,6 +52,61 @@
     </header>
     <!-- LOGO & NAVIGATION BAR END-->
 
+    <!-- MAIN CONTENT START -->
+    <main>
+      <!-- HOME PAGE -->
+      <section class="container">
+        <header class="home-page" id="home-page">
+          <h1 class="judul">
+            Hi!! <span id="user-greeting">User</span>, Welcome to our website!
+          </h1>
+        </header>
+        <paragraf class="paragraf">
+          <p>Ini First Website Saya Bareng ReVou !!!</p>
+        </paragraf>
+      </section>
+      <div class="banner-image"></div>
+
+      <!-- Our Profile -->
+      <!-- <div class="main-page"> -->
+        <section>
+          <header id="our-profile">
+            <h2>Our Profile</h2>
+          </header>
+
+          <div class="our-profile-content"></div>
+        </section>
+
+        <!-- Portfolio -->
+        <section>
+          <header id="portfolio">
+            <h2>My Portfolio</h2>
+          </header>
+
+          <div class="portfolio-content"></div>
+        </section>
+
+        <!-- Message Us -->
+        <section>
+          <header id="message-us">
+            <h2>Message Us</h2>
+          </header>
+
+          <div class="message-content"></div>
+        </section>
+
+      <!-- </div> -->
+      <!-- FOOTER -->
+    <div class="kotak">
+      <footer>
+        <p>&copy;Copyright Belongings To Author - 2025 Maju bersama REvoU!!</p>
+      </footer>
+    </div>
+      <!-- HERO SECTION -->
+      <!-- <div class="banner-image">
+        <img1 src="" alt=""></img1>
+      </div> -->
+    </main>
     <script src="./js/script.js"></script>
   </body>
 </html>
